[gd_scene load_steps=27 format=3 uid="uid://b27wsx4vp6bol"]

[ext_resource type="Script" path="res://Scenes/Level/create_a_level.gd" id="1_c4j5u"]
[ext_resource type="Texture2D" uid="uid://b1oftsji72ml0" path="res://Graphics/MySprites/UI/MyPaper.png" id="1_mojmm"]
[ext_resource type="Texture2D" uid="uid://gydek451unbl" path="res://Graphics/MySprites/City2.0/BlankTown.png" id="2_tycgg"]
[ext_resource type="Texture2D" uid="uid://mih7y6boqm85" path="res://Graphics/MySprites/City2.0/School.png" id="4_er70v"]
[ext_resource type="Texture2D" uid="uid://p6b4ybglkfln" path="res://Graphics/MySprites/City2.0/BTownV2.png" id="4_l2whb"]
[ext_resource type="Texture2D" uid="uid://bap2eeaf248i5" path="res://Graphics/MySprites/City2.0/Hospital.png" id="5_dxe0t"]
[ext_resource type="Texture2D" uid="uid://c6vd6vwp4qw7y" path="res://Graphics/MySprites/Player-front.png" id="5_hoy1s"]
[ext_resource type="Texture2D" uid="uid://doyqfsdrf7yc1" path="res://Graphics/MySprites/City2.0/PostOffice.png" id="6_2yg4p"]
[ext_resource type="Texture2D" uid="uid://bd3bsfxg1s036" path="res://Graphics/MySprites/City2.0/PoliceStation.png" id="6_dp23y"]
[ext_resource type="Script" path="res://Scenes/Object/Draggable.gd" id="6_ignpu"]
[ext_resource type="Texture2D" uid="uid://vxnm805cpfqa" path="res://Graphics/MySprites/City2.0/Supermarket.png" id="8_4jxp7"]
[ext_resource type="Texture2D" uid="uid://b35slfix1wgp1" path="res://Graphics/MySprites/UI/LocationBox.png" id="14_c5f6f"]
[ext_resource type="Texture2D" uid="uid://bo15ctbibhoih" path="res://Graphics/MySprites/City2.0/Firestation.png" id="14_rjkcp"]
[ext_resource type="Texture2D" uid="uid://c36vg45x7vsyh" path="res://Graphics/MySprites/City2.0/Park1.png" id="14_thvyl"]
[ext_resource type="Texture2D" uid="uid://s3rn7rvvpnew" path="res://Graphics/MySprites/City2.0/Restaurant.png" id="15_irc2c"]
[ext_resource type="Script" path="res://Scenes/Object/Dragable UL.gd" id="15_xelxr"]
[ext_resource type="Script" path="res://Scenes/Object/mmButton.gd" id="16_koqqs"]
[ext_resource type="Texture2D" uid="uid://dn4ulwcc5tbpw" path="res://Graphics/MySprites/City2.0/Conbini.png" id="16_nmhk7"]
[ext_resource type="Texture2D" uid="uid://bchbj3x74iyor" path="res://Graphics/MySprites/City2.0/Stadium.png" id="16_pwwhj"]
[ext_resource type="Texture2D" uid="uid://dymdcycfv5nhu" path="res://Graphics/MySprites/UI/MoveMarkerImage.png" id="16_yjipw"]
[ext_resource type="Texture2D" uid="uid://b5hp7or63ghqa" path="res://Graphics/MySprites/City2.0/Museum.png" id="17_qf0vh"]
[ext_resource type="Texture2D" uid="uid://diqhpkq40idy3" path="res://Graphics/MySprites/City2.0/Factory.png" id="18_fsn17"]
[ext_resource type="Script" path="res://Scenes/Object/mapPanel.gd" id="18_ip8dr"]
[ext_resource type="Texture2D" uid="uid://drhyh7e1o031s" path="res://Graphics/MySprites/City2.0/Department Store.png" id="19_srqd8"]
[ext_resource type="Texture2D" uid="uid://bae47yjxnx2eu" path="res://Graphics/MySprites/City2.0/Bookstore.png" id="20_fajrx"]
[ext_resource type="Texture2D" uid="uid://dgq5blhu8v0gb" path="res://Graphics/MySprites/City2.0/Aquarium.png" id="21_huac5"]

[node name="Create-a-Level" type="Node2D"]
script = ExtResource("1_c4j5u")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(683, 384)
texture = ExtResource("1_mojmm")

[node name="RightPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 983.0
offset_top = 17.0
offset_right = 1364.0
offset_bottom = 754.0

[node name="CenterContainer" type="CenterContainer" parent="RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -11.0
offset_right = -6.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RightPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TabContainer" type="TabContainer" parent="RightPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(340, 650)
layout_mode = 2
current_tab = 0
clip_tabs = false
drag_to_rearrange_enabled = true
tab_focus_mode = 0

[node name="Pick a Map" type="ScrollContainer" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="Map instructions" type="Label" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 19
text = "Pick a default map below, or drag and drop an image file onto the paper."
autowrap_mode = 3
clip_text = true

[node name="blankmapButton" type="TextureButton" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(290, 160)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_tycgg")
ignore_texture_size = true
stretch_mode = 0

[node name="BlankV2" type="TextureButton" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(290, 160)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_l2whb")
ignore_texture_size = true
stretch_mode = 0

[node name="Player size instructions" type="Label" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Adjust the player size:"

[node name="HBoxContainer" type="HBoxContainer" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TextureButton" type="TextureButton" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 72)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_hoy1s")
stretch_mode = 0

[node name="Smaller" type="Button" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Smaller
"

[node name="Bigger" type="Button" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Bigger
"

[node name="Locations" type="HBoxContainer" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = -3
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 5

[node name="Scrollbox" type="ScrollContainer" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Police Station" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture = ExtResource("6_dp23y")
stretch_mode = 3
script = ExtResource("6_ignpu")

[node name="Hospital" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("5_dxe0t")
stretch_mode = 3
script = ExtResource("6_ignpu")

[node name="Post Office" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("6_2yg4p")
stretch_mode = 3
script = ExtResource("6_ignpu")

[node name="School" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("4_er70v")
stretch_mode = 3
script = ExtResource("6_ignpu")

[node name="Supermarket" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("8_4jxp7")
stretch_mode = 3
script = ExtResource("6_ignpu")

[node name="Park" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("14_thvyl")
stretch_mode = 3
script = ExtResource("6_ignpu")

[node name="Convinience Store" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("16_nmhk7")
stretch_mode = 3
script = ExtResource("6_ignpu")

[node name="Fire Station" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("14_rjkcp")
script = ExtResource("6_ignpu")

[node name="Restaurant" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("15_irc2c")
script = ExtResource("6_ignpu")

[node name="Stadium" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("16_pwwhj")
script = ExtResource("6_ignpu")

[node name="Museum" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("17_qf0vh")
script = ExtResource("6_ignpu")

[node name="Factory" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("18_fsn17")
script = ExtResource("6_ignpu")

[node name="Department Store" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("19_srqd8")
script = ExtResource("6_ignpu")

[node name="Bookstore" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("20_fajrx")
script = ExtResource("6_ignpu")

[node name="Aquarium" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer/Scrollbox/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("21_huac5")
script = ExtResource("6_ignpu")

[node name="MarginContainer2" type="MarginContainer" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Instructions" type="Label" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(130, 100)
layout_mode = 2
text = "Click and drag a location or move marker into the map!"
autowrap_mode = 3

[node name="Unique Location" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("14_c5f6f")
expand_mode = 1
stretch_mode = 5
script = ExtResource("15_xelxr")

[node name="location Smaller" type="Button" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer2/VBoxContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "-"

[node name="location Bigger" type="Button" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer2/VBoxContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "+"

[node name="mm" type="TextureRect" parent="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("16_yjipw")
expand_mode = 1
stretch_mode = 5
script = ExtResource("16_koqqs")

[node name="Button" type="Button" parent="RightPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 48
text = "Start Level"

[node name="mapPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 9.0
offset_top = 14.0
offset_right = 969.0
offset_bottom = 755.0
script = ExtResource("18_ip8dr")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(392, 300)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="Esc button" type="Button" parent="."]
offset_left = 1331.0
offset_top = 3.0
offset_right = 1349.0
offset_bottom = 34.0
text = "X"

[connection signal="button_up" from="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer/blankmapButton" to="." method="_on_blankmap_button_button_up"]
[connection signal="pressed" from="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer/BlankV2" to="." method="_on_blank_v_2_pressed"]
[connection signal="pressed" from="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer/HBoxContainer/Smaller" to="." method="_on_smaller_pressed"]
[connection signal="pressed" from="RightPanel/CenterContainer/VBoxContainer/TabContainer/Pick a Map/MarginContainer/VBoxContainer/HBoxContainer/Bigger" to="." method="_on_bigger_pressed"]
[connection signal="pressed" from="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer2/VBoxContainer2/location Smaller" to="." method="_on_location_smaller_pressed"]
[connection signal="pressed" from="RightPanel/CenterContainer/VBoxContainer/TabContainer/Locations/MarginContainer2/VBoxContainer2/location Bigger" to="." method="_on_location_bigger_pressed"]
[connection signal="pressed" from="RightPanel/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Esc button" to="." method="_on_esc_button_pressed"]
